😘👶 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,16 @@
          <h1>File Metadata Microservice</h1>
          <h3>Part 1 of Free Code Camp Backend Challenges</h3>
       </div>
+     
+     <div>
+ <form action="/upload" method = "post" enctype = "multipart/form-data">
+   <input type ="file" name = "file"><input type ="submit">
+   
+       </form>      
+     </div>
+     
+     
+     
    </body>
 
 </html>
