--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
    <body>
       <div class="container">
          <h1>File Metadata Microservice</h1>
-         <h3>Part 1 of Free Code Camp Backend Challenges</h3>
+         <h3>Upload a file and its size will be returned in bytes</h3>
       </div>
      
      <div>
